--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "start": "next start"
     },
     "dependencies": {
+        "@material-ui/core": "^4.11.4",
         "emoji-mart": "^3.0.1",
         "emoji-picker-react": "^3.4.7",
         "eslint": "^7.27.0",
