--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "mongoose": "^5.12.12",
         "next": "10.2.3",
         "react": "17.0.2",
+        "react-background-slider": "^2.0.0",
         "react-dom": "17.0.2",
         "react-responsive-carousel": "^3.2.18",
         "yarn": "^1.22.10"
