--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "wall-of-positivity",
+    "name": "WOPTY Wall of Positivity",
     "version": "0.1.0",
     "private": true,
     "scripts": {
